--- a/guneyteletipUI/src/app/Features/Private/Definitions/Modals/edituser/edituser.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Modals/edituser/edituser.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="modal-body">
       <form>
-        <div class="form-group row m-1" *ngIf="false">
+        <div class="form-group row m-1" *ngIf="idDisabled">
           <label class="col-sm-4 col-form-label">ID : </label>
           <div class="col-sm-8">
             <input type="number" class="form-control" name="id" [(ngModel)]="userViewModel.pk" disabled>
@@ -35,7 +35,7 @@
         <div class="form-group row m-1">
           <label class="col-sm-4 col-form-label">E-Posta : </label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" name="email" [(ngModel)]="userViewModel.emailadress">
+            <input type="text" class="form-control" name="email" [(ngModel)]="userViewModel.emailAdress">
           </div>
         </div>
         <div class="form-group row m-1">
