--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/user.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/user.component.html
@@ -13,13 +13,13 @@
       </div>
       <div class="row mb-3">
         <div class="col">
-          <app-usergrid></app-usergrid>
+          <app-usergrid [filterValue]="userFilterComponent?.userNameOutput"></app-usergrid>
         </div>
       </div>
 
       <div class="row mb-5">
         <div class="col">
-          <app-usertabs></app-usertabs>
+          <app-usertabs [clickedItem]="userGridComponent?.gridUser?.clickedItem?.pk"></app-usertabs>
         </div>
       </div>
     </div>
