--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/userfilter/userfilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/userfilter/userfilter.component.html
@@ -4,11 +4,11 @@
       <div class="col-md-6">
         <label class="font-weight-bold">Kullanıcı Adı</label>
         <div class="input-group input-group-sm">
-          <input type="text" class="form-control input-sm" name="kullaniciAdi">
+          <input type="text" class="form-control input-sm" name="username" [(ngModel)]="userName">
         </div>
       </div>
     </div>
   </form>
-  <button class="btn btn-success btn-sm mr-2" tooltip="Filtrele"><fa name="search"></fa></button>
+  <button class="btn btn-success btn-sm mr-2" tooltip="Filtrele" (click)="onFilter()"><fa name="search"></fa></button>
   <button class="btn btn-danger btn-sm" tooltip="Filtreleri Temizle"><fa name="close"></fa></button>
 </filter>
