--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="row mb-3">
         <div class="col-md-9">
-          <app-kosgrid></app-kosgrid>
+          <app-kosgrid [filterData]="kosFilterComponent?.kosFilterOutput"></app-kosgrid>
         </div>
         <div class="col-md-3 marginClass">
           <app-kosstatistic></app-kosstatistic>
