--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/rolefilter/rolefilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/rolefilter/rolefilter.component.html
@@ -3,7 +3,7 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label class="font-weight-bold">Rol Adı</label>
-        <input type="text" class="form-control" name="tcAccess">
+        <input type="text" class="form-control" name="tcAccess" [(ngModel)]="roleName">
       </div>
     </div>
   </form>
