--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usertabs/usertabs.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/usertabs/usertabs.component.html
@@ -1,40 +1,48 @@
 <div>
   <tabset>
-    <tab heading="Kos Detay" id="tab1">
-      <div class="row">
-        <div class="col">
+    <tab heading="Rol Seçimi" id="tabRole">
+      <div class="content mt-5">
+        <div class="form-group row m-1">
+          <div class="col-sm-3"></div>
           <label class="font-weight-bold">Rol Seçimi</label>
-          <ng-multiselect-dropdown [placeholder]="'Rol Seçimi'"
-                                   [data]="dropdownList"
-                                   [(ngModel)]="selectedItems"
-                                   [settings]="dropdownSettings2"
-                                   [disabled]="dropdownDisabled">
-          </ng-multiselect-dropdown>
-        </div>
-        <div class="col">
-          <button class="btn btn-sm" [ngClass]="{'btn-success': !dropdownDisabled, 'btn-warning' : dropdownDisabled}" (click)="dropdownDisabled = !dropdownDisabled">
-            <fa name="pencil" *ngIf="dropdownDisabled"></fa>
-            <fa name="check" *ngIf="!dropdownDisabled"></fa>
-          </button>
+          <div class="col-sm-4">
+            <ng-multiselect-dropdown [placeholder]="'Rol Seçimi'"
+                                     [data]="ddlRoleData"
+                                     [(ngModel)]="ddlRoleSelectedItem"
+                                     [settings]="ddlRoleSettings"
+                                     [disabled]="ddlRoleDisabled">
+            </ng-multiselect-dropdown>
+          </div>
+          <div class="col-sm-2">
+            <button class="btn btn-sm" [ngClass]="{'btn-success': !ddlRoleDisabled, 'btn-warning' : ddlRoleDisabled}" (click)="ddlRoleDisabled = !ddlRoleDisabled;onSaveRole()">
+              <fa name="pencil" *ngIf="ddlRoleDisabled"></fa>
+              <fa name="check" *ngIf="!ddlRoleDisabled"></fa>
+            </button>
+          </div>
+          <div class="col-sm-2"></div>
         </div>
       </div>
     </tab>
-    <tab heading="Tab 2">
-      <div class="row">
-        <div class="col">
+    <tab heading="Hastane Seçimi" id="tabTenant">
+      <div class="content mt-5">
+        <div class="form-group row m-1">
+          <div class="col-sm-3"></div>
           <label class="font-weight-bold">Hastane Seçimi</label>
-          <ng-multiselect-dropdown [placeholder]="'Hastane Seçimi'"
-                                   [data]="dropdownList"
-                                   [(ngModel)]="selectedItems"
-                                   [settings]="dropdownSettings"
-                                   [disabled]="dropdownDisabled1">
-          </ng-multiselect-dropdown>
-        </div>
-        <div class="col">
-          <button class="btn btn-sm" [ngClass]="{'btn-success': !dropdownDisabled1, 'btn-warning' : dropdownDisabled1}" (click)="dropdownDisabled1 = !dropdownDisabled1">
-            <fa name="pencil" *ngIf="dropdownDisabled1"></fa>
-            <fa name="check" *ngIf="!dropdownDisabled1"></fa>
-          </button>
+          <div class="col-sm-4">
+            <ng-multiselect-dropdown [placeholder]="'Hastane Seçimi'"
+                                     [data]="ddlTenantData"
+                                     [(ngModel)]="ddlTenantSelectedItem"
+                                     [settings]="ddlTenantSettings"
+                                     [disabled]="ddlTenantDisabled">
+            </ng-multiselect-dropdown>
+          </div>
+          <div class="col-sm-2">
+            <button class="btn btn-sm" [ngClass]="{'btn-success': !ddlTenantDisabled, 'btn-warning' : ddlTenantDisabled}" (click)="ddlTenantDisabled = !ddlTenantDisabled;">
+              <fa name="pencil" *ngIf="ddlTenantDisabled"></fa>
+              <fa name="check" *ngIf="!ddlTenantDisabled" ></fa>
+            </button>
+          </div>
+          <div class="col-sm-2"></div>
         </div>
       </div>
     </tab>
